--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 <label for="iNumber">Contact Number:<br></label>
                 <input type="number" id="iName"><br>
                 <br>
-                <input type="hidden" name="_next" value="thankyou/Thanks.html">
+                <input type="hidden" name="_next" value="Thanks.html">
                 <button id="submit" type="submit">Contact</button>
             </form>
         </div>
